Completado index.html y creacion styles.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Tienda ecommerce</title>
 </head>
 
@@ -48,9 +49,8 @@
 
     <main>
         <h2>Nuestros productos</h2>
-
         <div>
-            <div>
+            <div> <!-- Primer producto -->
                 <img src="img/producto1.jpg" alt="Imagen Producto">
                 <div>
                     <h3>Producto 1</h3>
@@ -61,14 +61,102 @@
                     <a href="#">Agregar al carrito</a>
                 </div>
             </div>
-        </div>
 
+            <div> <!-- Segundo producto -->
+                <img src="img/producto2.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis consectetur corrupti aperiam
+                        natus, sunt aut tempora eos illum facilis. Iure praesentium esse distinctio, magnam accusamus
+                        quisquam rem harum et odit!</p>
+                    <p>1000€</p>
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div> <!-- Tercer producto -->
+                <img src="img/producto3.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis consectetur corrupti aperiam
+                        natus, sunt aut tempora eos illum facilis. Iure praesentium esse distinctio, magnam accusamus
+                        quisquam rem harum et odit!</p>
+                    <p>1000€</p>
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div> <!-- Cuarto producto -->
+                <img src="img/producto4.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis consectetur corrupti aperiam
+                        natus, sunt aut tempora eos illum facilis. Iure praesentium esse distinctio, magnam accusamus
+                        quisquam rem harum et odit!</p>
+                    <p>1000€</p>
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div> <!-- Quinto producto -->
+                <img src="img/producto5.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis consectetur corrupti aperiam
+                        natus, sunt aut tempora eos illum facilis. Iure praesentium esse distinctio, magnam accusamus
+                        quisquam rem harum et odit!</p>
+                    <p>1000€</p>
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div> <!-- Sexto producto -->
+                <img src="img/producto6.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 6</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis consectetur corrupti aperiam
+                        natus, sunt aut tempora eos illum facilis. Iure praesentium esse distinctio, magnam accusamus
+                        quisquam rem harum et odit!</p>
+                    <p>1000€</p>
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+        </div>
     </main>
 
-
     <footer>
+        <div>
+            <h3>Categorías</h3>
+            <nav>
+                <a href="#">Cocina</a>
+                <a href="#">Oficina</a>
+                <a href="#">Jardín</a>
+                <a href="#">Cochera</a>
+                <a href="#">Dormitorios</a>
+            </nav>
+        </div>
+        <div>
+            <h3>Sobre nosotros</h3>
+            <nav>
+                <a href="#">Nuestra historia</a>
+                <a href="#">Misión y Valores</a>
+                <a href="#">Carreras</a>
+                <a href="#">Política de privacidad</a>
+                <a href="#">Términos del Servicio</a>
+            </nav>
+        </div>
+        <div>
+            <h3>Soporte</h3>
+            <nav>
+                <a href="#">Preguntas Frecuentes</a>
+                <a href="#">Ayuda en Línea</a>
+                <a href="#">Confianza y Seguridad</a>
+            </nav>
+        </div>
         <p>Todos los derechos reservados, TiendaMuebles</p>
     </footer>
+
 </body>
 
 </html>
