--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Tienda ecommerce</title>
 </head>
 
 <body>
     <header>
-        <h1>Tienda Muebles</h1>
+        <h1>Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav>
+    <nav class="navegacion">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
@@ -38,7 +39,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="sobre-nosotros">
         <div>
             <h2>Sobre nosotros</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione distinctio nesciunt nostrum doloremque
