Menú de navegación, hero y categorías de productos

--- a/index.html
+++ b/index.html
@@ -11,31 +11,38 @@
 
 <body>
     <header>
-        <h1>Tienda <span>Muebles</span></h1>
+        <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav class="navegacion">
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="blog.html">Blog</a>
-        <a href="galeria.html">Galería</a>
-        <a href="contacto.html">Contacto</a>
-    </nav>
+    <div class="contenedor-navegacion">
+        <nav class="navegacion contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="tienda.html">Tienda</a>
+            <a href="blog.html">Blog</a>
+            <a href="galeria.html">Galería</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </div>
 
-    <section>
+    <div class="hero">
+    </div>
+
+    <section class="contenedor">
         <h2>Categorías de productos</h2>
-        <div>
-            <img src="/img/categoria1.jpg" alt="Imagen Categoría">
-            <a href="#">Oficina</a>
-        </div>
-        <div>
-            <img src="/img/categoria2.jpg" alt="Imagen Categoría">
-            <a href="#">Hogar</a>
-        </div>
-        <div>
-            <img src="/img/categoria3.jpg" alt="Imagen Categoría">
-            <a href="#">Cocina</a>
+        <div class="listado-categorias">
+            <div>
+                <img src="/img/categoria1.jpg" alt="Imagen Categoría">
+                <a href="#">Oficina</a>
+            </div>
+            <div>
+                <img src="/img/categoria2.jpg" alt="Imagen Categoría">
+                <a href="#">Hogar</a>
+            </div>
+            <div>
+                <img src="/img/categoria3.jpg" alt="Imagen Categoría">
+                <a href="#">Cocina</a>
+            </div>
         </div>
     </section>
 
