Diseño de la sección de categorías

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
+    <!-- Sección MENÚ DE NAVEGACIÓN -->
     <div class="contenedor-navegacion">
         <nav class="navegacion contenedor">
             <a href="index.html">Inicio</a>
@@ -25,21 +26,23 @@
         </nav>
     </div>
 
+    <!-- Sección HERO de cabecera -->
     <div class="hero">
     </div>
 
+    <!-- Sección CATEGORÍA DE PRODUCTOS -->
     <section class="contenedor">
         <h2>Categorías de productos</h2>
         <div class="listado-categorias">
-            <div>
+            <div class="categoria">
                 <img src="/img/categoria1.jpg" alt="Imagen Categoría">
                 <a href="#">Oficina</a>
             </div>
-            <div>
+            <div class="categoria">
                 <img src="/img/categoria2.jpg" alt="Imagen Categoría">
                 <a href="#">Hogar</a>
             </div>
-            <div>
+            <div class="categoria">
                 <img src="/img/categoria3.jpg" alt="Imagen Categoría">
                 <a href="#">Cocina</a>
             </div>
