cambio unidades y diseño sección categorias

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <!-- Sección CATEGORÍA DE PRODUCTOS -->
-    <section class="contenedor">
+    <section class="contenedor categorias">
         <h2>Categorías de productos</h2>
         <div class="listado-categorias">
             <div class="categoria">
