css sección sobre nostros

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         </div>
     </section>
 
+    <!-- Categoría SOBRE NOSOTROS -->
     <section class="sobre-nosotros">
-        <div>
+        <div class="contenedor">
             <h2>Sobre nosotros</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione distinctio nesciunt nostrum doloremque
                 nisi enim earum. Repudiandae, nam in, molestias dolor aperiam distinctio, odio atque illo obcaecati
