seccion Sobre nosotros terminada

--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
 
     <!-- Categoría SOBRE NOSOTROS -->
     <section class="sobre-nosotros">
-        <div class="contenedor">
-            <h2>Sobre nosotros</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione distinctio nesciunt nostrum doloremque
-                nisi enim earum. Repudiandae, nam in, molestias dolor aperiam distinctio, odio atque illo obcaecati
-                excepturi illum accusantium.</p>
+        <div class="grid-sobrenosotros">
+            <div class="img_sobrenosotros">
+            </div>
+            <div class="txt_sobrenosotros">
+                <h2>Sobre Nosotros</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum officia provident rem dolores totam
+                    dolore officiis sit alias deserunt animi esse, perspiciatis minima similique omnis quod. Asperiores
+                    doloribus sunt consequuntur.</p>
+            </div>
         </div>
     </section>
 
